--- a/source/catalog.html
+++ b/source/catalog.html
@@ -42,81 +42,81 @@
           <img class="products__img" src="/source/img/catalog-cards-img/catalog-1-desktop1.png"
             alt="Cat Energy PRO 500 г (Курица)">
           <h3 class="products__title">Cat Energy PRO 500 г</h3>
-          <p class="products-weight">Масса</p>
-          <p class="products-weight-amount">500 г</p>
-          <p class="products-flavor">Вкус</p>
-          <p class="products-flavor-type">Курица</p>
-          <p class="products-price">Цена</p>
-          <p class="products-price-amount">700 ₽</p>
+          <p class="products__weight">Масса</p>
+          <p class="products__weight-amount">500 г</p>
+          <p class="products__flavor">Вкус</p>
+          <p class="products__flavor-type">Курица</p>
+          <p class="products__price">Цена</p>
+          <p class="products__price-amount">700 ₽</p>
           <button class="button products__order-button" type="button">Заказать</button>
         </li>
         <li class="products__card">
           <img class="products__img" src="" alt="Cat Energy PRO 1000 г (Курица)">
           <h3 class="products__title">Cat Energy PRO 1000 г</h3>
-          <p class="products-weight">Масса</p>
-          <p class="products-weight-amount">1000 г</p>
-          <p class="products-flavor">Вкус</p>
-          <p class="products-flavor-type">Курица</p>
-          <p class="products-price">Цена</p>
-          <p class="products-price-amount">1000 ₽</p>
+          <p class="products__weight">Масса</p>
+          <p class="products__weight-amount">1000 г</p>
+          <p class="products__flavor">Вкус</p>
+          <p class="products__flavor-type">Курица</p>
+          <p class="products__price">Цена</p>
+          <p class="products__price-amount">1000 ₽</p>
           <button class="button products__order-button" type="button">Заказать</button>
         </li>
         <li class="products__card">
           <img class="products__img" src="" alt="Cat Energy PRO 500 г (Рыба)">
           <h3 class="products__title">Cat Energy PRO 500 г</h3>
-          <p class="products-weight">Масса</p>
-          <p class="products-weight-amount">500 г</p>
-          <p class="products-flavor">Вкус</p>
-          <p class="products-flavor-amount">Рыба</p>
-          <p class="products-price">Цена</p>
-          <p class="products-price-amount">700 ₽</p>
+          <p class="products__weight">Масса</p>
+          <p class="products__weight-amount">500 г</p>
+          <p class="products__flavor">Вкус</p>
+          <p class="products__flavor-amount">Рыба</p>
+          <p class="products__price">Цена</p>
+          <p class="products__price-amount">700 ₽</p>
           <button class="button products__order-button" type="button">Заказать</button>
         </li>
         <li class="products__card">
           <img class="products__img" src="" alt="Cat Energy PRO 1000 г (Рыба)">
           <h3 class="products__title">Cat Energy PRO 1000 г</h3>
-          <p class="products-weight">Масса</p>
-          <p class="products-weight-amount">1000 г</p>
-          <p class="products-flavor">Вкус</p>
-          <p class="products-flavor-amount">Рыба</p>
-          <p class="products-price">Цена</p>
-          <p class="products-price-amount">1000 ₽</p>
+          <p class="products__weight">Масса</p>
+          <p class="products__weight-amount">1000 г</p>
+          <p class="products__flavor">Вкус</p>
+          <p class="products__flavor-amount">Рыба</p>
+          <p class="products__price">Цена</p>
+          <p class="products__price-amount">1000 ₽</p>
           <button class="button products__order-button" type="button">Заказать</button>
         </li>
         <li class="products__card">
           <img class="products__img" src="" alt="Cat Energy SLIM 500 г (Гречка)">
           <h3 class="products__title">Cat Energy SLIM 500 г</h3>
-          <p class="products-weight">Масса</p>
-          <p class="products-weight-amount">500 г</p>
-          <p class="products-flavor">Вкус</p>
-          <p class="products-flavor-amount">Гречка</p>
-          <p class="products-price">Цена</p>
-          <p class="products-price-amount">400 ₽</p>
+          <p class="products__weight">Масса</p>
+          <p class="products__weight-amount">500 г</p>
+          <p class="products__flavor">Вкус</p>
+          <p class="products__flavor-amount">Гречка</p>
+          <p class="products__price">Цена</p>
+          <p class="products__price-amount">400 ₽</p>
           <button class="button products__order-button" type="button">Заказать</button>
         </li>
         <li class="products__card">
           <img class="products__img" src="" alt="Cat Energy SLIM 1000 г (Гречка)">
           <h3 class="products__title">Cat Energy PRO 1000 г</h3>
-          <p class="products-weight">Масса</p>
-          <p class="products-weight-amount">500 г</p>
-          <p class="products-flavor">Вкус</p>
-          <p class="products-flavor-amount">Гречка</p>
-          <p class="products-price">Цена</p>
-          <p class="products-price-amount">700 ₽</p>
+          <p class="products__weight">Масса</p>
+          <p class="products__weight-amount">500 г</p>
+          <p class="products__flavor">Вкус</p>
+          <p class="products__flavor-amount">Гречка</p>
+          <p class="products__price">Цена</p>
+          <p class="products__price-amount">700 ₽</p>
           <button class="button products__order-button" type="button">Заказать</button>
         </li>
         <li class="products__card">
           <img class="products__img" src="" alt="Cat Energy SLIM 500 г (Рис)">
           <h3 class="products__title">Cat Energy SLIM 500 г</h3>
-          <p class="products-weight">Масса</p>
-          <p class="products-weight-amount">500 г</p>
-          <p class="products-flavor">Вкус</p>
-          <p class="products-flavor-amount">Рис</p>
-          <p class="products-price">Цена</p>
-          <p class="products-price-amount">500 ₽</p>
+          <p class="products__weight">Масса</p>
+          <p class="products__weight-amount">500 г</p>
+          <p class="products__flavor">Вкус</p>
+          <p class="products__flavor-amount">Рис</p>
+          <p class="products__price">Цена</p>
+          <p class="products__price-amount">500 ₽</p>
           <button class="button products__order-button" type="button">Заказать</button>
         </li>
-        <li class="products__card products__card-extra">
+        <li class="products__card products__card--extra">
           <p>Показать еще 100500 товаров</p>
           <p>На самом деле вкусов гораздо больше!</p>
           <button class="products__more-button" type="button">Показать все</button>
@@ -159,8 +159,8 @@
         </li>
       </ul>
     </section>
-    <div class="promotion">
-      <p>Закажите все и получите чехол для кота в подарок!</p>
+    <div class="catalog__promotion promotion">
+      <p class="promotion_description">Закажите все и получите чехол для кота в подарок!</p>
     </div>
     <section class="partnership">
       <h2 class="partnership__title partnership__title--small">Приглашаем к сотрудничеству дилеров!</h2>
