--- a/source/catalog.html
+++ b/source/catalog.html
@@ -160,7 +160,7 @@
       </ul>
     </section>
     <div class="catalog__promotion promotion">
-      <p class="promotion_description">Закажите все и получите чехол для кота в подарок!</p>
+      <p class="promotion__description">Закажите все и получите чехол для кота в подарок!</p>
     </div>
     <section class="partnership">
       <h2 class="partnership__title partnership__title--small">Приглашаем к сотрудничеству дилеров!</h2>
