Validator marks fix

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -39,7 +39,7 @@
       <h2 class="visually-hidden">Список доступных товаров</h2>
       <ul class="products__list">
         <li class="products__card">
-          <img class="products__img" src="/source/img/catalog-cards-img/catalog-1-desktop1.png"
+          <img class="products__img" src="/source/img/catalog-cards-img/catalog-1-desktop.png"
             alt="Cat Energy PRO 500 г (Курица)">
           <h3 class="products__title">Cat Energy PRO 500 г</h3>
           <p class="products__weight">Масса</p>
@@ -51,7 +51,8 @@
           <button class="button products__order-button" type="button">Заказать</button>
         </li>
         <li class="products__card">
-          <img class="products__img" src="" alt="Cat Energy PRO 1000 г (Курица)">
+          <img class="products__img" src="/source/img/catalog-cards-img/catalog-2-desktop.png"
+            alt="Cat Energy PRO 1000 г (Курица)">
           <h3 class="products__title">Cat Energy PRO 1000 г</h3>
           <p class="products__weight">Масса</p>
           <p class="products__weight-amount">1000 г</p>
@@ -62,7 +63,8 @@
           <button class="button products__order-button" type="button">Заказать</button>
         </li>
         <li class="products__card">
-          <img class="products__img" src="" alt="Cat Energy PRO 500 г (Рыба)">
+          <img class="products__img" src="/source/img/catalog-cards-img/catalog-3-desktop.png"
+            alt="Cat Energy PRO 500 г (Рыба)">
           <h3 class="products__title">Cat Energy PRO 500 г</h3>
           <p class="products__weight">Масса</p>
           <p class="products__weight-amount">500 г</p>
@@ -73,7 +75,8 @@
           <button class="button products__order-button" type="button">Заказать</button>
         </li>
         <li class="products__card">
-          <img class="products__img" src="" alt="Cat Energy PRO 1000 г (Рыба)">
+          <img class="products__img" src="/source/img/catalog-cards-img/catalog-4-desktop.png"
+            alt="Cat Energy PRO 1000 г (Рыба)">
           <h3 class="products__title">Cat Energy PRO 1000 г</h3>
           <p class="products__weight">Масса</p>
           <p class="products__weight-amount">1000 г</p>
@@ -84,7 +87,8 @@
           <button class="button products__order-button" type="button">Заказать</button>
         </li>
         <li class="products__card">
-          <img class="products__img" src="" alt="Cat Energy SLIM 500 г (Гречка)">
+          <img class="products__img" src="/source/img/catalog-cards-img/catalog-5-desktop.png"
+            alt="Cat Energy SLIM 500 г (Гречка)">
           <h3 class="products__title">Cat Energy SLIM 500 г</h3>
           <p class="products__weight">Масса</p>
           <p class="products__weight-amount">500 г</p>
@@ -95,7 +99,8 @@
           <button class="button products__order-button" type="button">Заказать</button>
         </li>
         <li class="products__card">
-          <img class="products__img" src="" alt="Cat Energy SLIM 1000 г (Гречка)">
+          <img class="products__img" src="/source/img/catalog-cards-img/catalog-6-desktop.png"
+            alt="Cat Energy SLIM 1000 г (Гречка)">
           <h3 class="products__title">Cat Energy PRO 1000 г</h3>
           <p class="products__weight">Масса</p>
           <p class="products__weight-amount">500 г</p>
@@ -106,7 +111,8 @@
           <button class="button products__order-button" type="button">Заказать</button>
         </li>
         <li class="products__card">
-          <img class="products__img" src="" alt="Cat Energy SLIM 500 г (Рис)">
+          <img class="products__img" src="/source/img/catalog-cards-img/catalog-7-desktop.png"
+            alt="Cat Energy SLIM 500 г (Рис)">
           <h3 class="products__title">Cat Energy SLIM 500 г</h3>
           <p class="products__weight">Масса</p>
           <p class="products__weight-amount">500 г</p>
