--- a/source/form.html
+++ b/source/form.html
@@ -76,11 +76,11 @@
         <h3 class="form__title">Контактные данные (владельца кота)</h3>
         <ul class="form__list">
           <li>
-            <label class="form__mail-label" for="mail">E-mail:*</label>
-            <input class="form__mail-input" type="email" id=mail" name="mail" placeholder="Введите e-mail">
+            <label class="form__mail-label" for="email">E-mail:*</label>
+            <input class="form__mail-input" type="email" id="email" name="email" placeholder="Введите e-mail">
           </li>
           <li>
-            <label class="form__tel-label" for="owner-tel">Телефон:*</label>
+            <label class="form__tel-label" for="tel">Телефон:*</label>
             <input class="form__tel-input" type="tel" id="tel" name="tel" placeholder="+7">
           </li>
         </ul>
