--- a/source/index.html
+++ b/source/index.html
@@ -87,12 +87,12 @@
         в день. </p>
       <div class="main__stats-list main__stats-list--weight weight duration">
         <div class="weight__wrapper">
-          <dt class="weight__stat-number">5 кг</dt>
-          <dd class="weight__stat-text">снижение веса</dd>
+          <p class="weight__stat-number">5 кг</p>
+          <p class="weight__stat-text">снижение веса</p>
         </div>
         <div class="duration__wrapper">
-          <dt class="duration__stat-number">60 дней</dt>
-          <dd class="duration__stat-text">затрачено времени</dd>
+          <p class="duration__stat-number">60 дней</p>
+          <p class="duration__stat-text">затрачено времени</p>
         </div>
       </div>
       <p class="main__spent-amount">Затраты на питание: 15 000 руб.</p>
