--- a/source/index.html
+++ b/source/index.html
@@ -4,16 +4,16 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Кэт энерджи</title>
-  <link rel="stylesheet" href="/source/css/style.css">
+  <link href="./css/style.css" rel="stylesheet">
 </head>
 
 <body class="page__body">
   <header class="main-header">
     <a class="main-header__logo" href="index.html">
-      <img class="main-header__logo-img" src="/source/img/logo-mobile-img.svg" width="33" height="37"
+      <img class="main-header__logo-img" src="./img/logo-mobile-img.svg" width="33" height="37"
         alt="Логотип компании Cat energy">
     </a>
-    <img src="/source/img/logo-text.svg" alt="Текстовый логотип компании Cat energy">
+    <img src="./img/logo-text.svg" alt="Текстовый логотип компании Cat energy">
     <button class="main-header__nav-toogle" type="button">
       <span class="visually-hidden">Открыть меню</span>
     </button>
@@ -37,7 +37,7 @@
     <section class="main__intro intro">
       <h1 class="intro__title">Функциональное питание для котов</h1>
       <p class="intro__description">Занялся собой? Займист котом!</p>
-      <img class="intro__img" src="/source/img/index-can-mobile.png" alt="Банка с едой для котов">
+      <img class="intro__img" src="./img/index-can-mobile.png" alt="Банка с едой для котов">
       <a class="intro__button button" href="form.html">Подбор программы</a>
     </section>
     <section class="main__programs programs">
@@ -85,14 +85,14 @@
       <p class="main__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
         Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов
         в день. </p>
-      <div class="main__stats-list main__stats-list--weight weight duration">
-        <div class="weight__wrapper">
-          <p class="weight__stat-number">5 кг</p>
-          <p class="weight__stat-text">снижение веса</p>
+      <div class="main__stats-list  stats">
+        <div class="stats__wrapper">
+          <p class="stats__number">5 кг</p>
+          <p class="stats__text">снижение веса</p>
         </div>
-        <div class="duration__wrapper">
-          <p class="duration__stat-number">60 дней</p>
-          <p class="duration__stat-text">затрачено времени</p>
+        <div class="stats__wrapper">
+          <p class="stats__number">60 дней</p>
+          <p class="stats__text">затрачено времени</p>
         </div>
       </div>
       <p class="main__spent-amount">Затраты на питание: 15 000 руб.</p>
