--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,30 +4,35 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Кэт энерджи</title>
-  <link rel="stylesheet" href="/source/css/style.css">
+  <link href="./css/style.css" rel="stylesheet">
 </head>
 
 <body class="page__body">
-  <header class="main-header">
-    <a class="main-header__logo" href="index.html">
-      <img class="main-header__logo-img" src="/source/img/logo-mobile-img.svg" width="33" height="37"
+  <header class="header">
+    <a class="header__logo" href="index.html">
+      <img class="header__logo-img" src="./img/logo-mobile-img.svg" width="33" height="37"
         alt="Логотип компании Cat energy">
     </a>
-    <img src="/source/img/logo-text.svg" alt="Текстовый логотип компании Cat energy">
+    <img src="./img/logo-text.svg" alt="Текстовый логотип компании Cat energy">
+    <button class="header__nav-toogle" type="button">
+      <svg width="24" height="18" viewBox="0 0 24 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <line y1="1.25" x2="24" y2="1.25" stroke="black" stroke-width="1.5" />
+        <line y1="9.25" x2="24" y2="9.25" stroke="black" stroke-width="1.5" />
+        <line y1="17.25" x2="24" y2="17.25" stroke="black" stroke-width="1.5" />
+      </svg>
+      <span class="visually-hidden">Открыть меню</span>
+    </button>
     <nav class="main-nav">
-      <button class="main-nav__toogle" type="button">
-        <span class="visually-hidden">Открыть меню</span>
-      </button>
       <div class="main-nav__wrapper">
         <ul class="main-nav__list">
           <li class="main-nav__item main-nav__item--current">
             <a class="main-nav__link" href="index.html">Главная</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="index.html">Каталог продукции</a>
+            <a class="main-nav__link" href="catalog.html">Каталог продукции</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="index.html">Подбор программы</a>
+            <a class="main-nav__link" href="form.html">Подбор программы</a>
           </li>
         </ul>
       </div>
@@ -39,97 +44,126 @@
       <h2 class="visually-hidden">Список доступных товаров</h2>
       <ul class="products__list">
         <li class="products__card">
-          <img class="products__img" src="/source/img/catalog-cards-img/catalog-1-desktop.png"
+          <img class="products__img" src="./img/catalog-cards-img/catalog-1-desktop.png"
             alt="Cat Energy PRO 500 г (Курица)">
-          <h3 class="products__title">Cat Energy PRO 500 г</h3>
-          <p class="products__weight">Масса</p>
-          <p class="products__weight-amount">500 г</p>
-          <p class="products__flavor">Вкус</p>
-          <p class="products__flavor-type">Курица</p>
-          <p class="products__price">Цена</p>
-          <p class="products__price-amount">700 ₽</p>
+          <div class="products__descritpion">
+            <h3 class="products__title">Cat Energy PRO 500 г</h3>
+            <div class="products__stats">
+              <p class="products__weight">Масса</p>
+              <p class="products__weight-amount">500 г</p>
+              <p class="products__flavor">Вкус</p>
+              <p class="products__flavor-type">Курица</p>
+              <p class="products__price">Цена</p>
+              <p class="products__price-amount">700 ₽</p>
+            </div>
+          </div>
           <button class="button products__order-button" type="button">Заказать</button>
         </li>
         <li class="products__card">
-          <img class="products__img" src="/source/img/catalog-cards-img/catalog-2-desktop.png"
-            alt="Cat Energy PRO 1000 г (Курица)">
-          <h3 class="products__title">Cat Energy PRO 1000 г</h3>
-          <p class="products__weight">Масса</p>
-          <p class="products__weight-amount">1000 г</p>
-          <p class="products__flavor">Вкус</p>
-          <p class="products__flavor-type">Курица</p>
-          <p class="products__price">Цена</p>
-          <p class="products__price-amount">1000 ₽</p>
-          <button class="button products__order-button" type="button">Заказать</button>
-        </li>
-        <li class="products__card">
-          <img class="products__img" src="/source/img/catalog-cards-img/catalog-3-desktop.png"
-            alt="Cat Energy PRO 500 г (Рыба)">
-          <h3 class="products__title">Cat Energy PRO 500 г</h3>
-          <p class="products__weight">Масса</p>
-          <p class="products__weight-amount">500 г</p>
-          <p class="products__flavor">Вкус</p>
-          <p class="products__flavor-amount">Рыба</p>
-          <p class="products__price">Цена</p>
-          <p class="products__price-amount">700 ₽</p>
-          <button class="button products__order-button" type="button">Заказать</button>
-        </li>
-        <li class="products__card">
-          <img class="products__img" src="/source/img/catalog-cards-img/catalog-4-desktop.png"
+          <img class="products__img products__img--large" src="./img/catalog-cards-img/catalog-2-desktop.png"
             alt="Cat Energy PRO 1000 г (Рыба)">
-          <h3 class="products__title">Cat Energy PRO 1000 г</h3>
-          <p class="products__weight">Масса</p>
-          <p class="products__weight-amount">1000 г</p>
-          <p class="products__flavor">Вкус</p>
-          <p class="products__flavor-amount">Рыба</p>
-          <p class="products__price">Цена</p>
-          <p class="products__price-amount">1000 ₽</p>
+          <div class="products__descritpion">
+            <h3 class="products__title">Cat Energy PRO 1000 г</h3>
+            <div class="products__stats">
+              <p class="products__weight">Масса</p>
+              <p class="products__weight-amount">1000 г</p>
+              <p class="products__flavor">Вкус</p>
+              <p class="products__flavor-amount">Курица</p>
+              <p class="products__price">Цена</p>
+              <p class="products__price-amount">1000 ₽</p>
+            </div>
+          </div>
           <button class="button products__order-button" type="button">Заказать</button>
         </li>
         <li class="products__card">
-          <img class="products__img" src="/source/img/catalog-cards-img/catalog-5-desktop.png"
+          <img class="products__img" src="./img/catalog-cards-img/catalog-3-desktop.png"
+            alt="Cat Energy PRO 500 г (Рыба)">
+          <div class="products__descritpion">
+            <h3 class="products__title">Cat Energy PRO 500 г</h3>
+            <div class="products__stats">
+              <p class="products__weight">Масса</p>
+              <p class="products__weight-amount">500 г</p>
+              <p class="products__flavor">Вкус</p>
+              <p class="products__flavor-amount">Рыба</p>
+              <p class="products__price">Цена</p>
+              <p class="products__price-amount">700 ₽</p>
+            </div>
+          </div>
+          <button class="button products__order-button" type="button">Заказать</button>
+        </li>
+        <li class="products__card">
+          <img class="products__img products__img--large" src="./img/catalog-cards-img/catalog-4-desktop.png"
+            alt="Cat Energy PRO 1000 г (Рыба)">
+          <div class="products__descritpion">
+            <h3 class="products__title">Cat Energy PRO 1000 г</h3>
+            <div class="products__stats">
+              <p class="products__weight">Масса</p>
+              <p class="products__weight-amount">1000 г</p>
+              <p class="products__flavor">Вкус</p>
+              <p class="products__flavor-amount">Рыба</p>
+              <p class="products__price">Цена</p>
+              <p class="products__price-amount">1000 ₽</p>
+            </div>
+          </div>
+          <button class="button products__order-button" type="button">Заказать</button>
+        </li>
+        <li class="products__card">
+          <img class="products__img" src="./img/catalog-cards-img/catalog-5-desktop.png"
             alt="Cat Energy SLIM 500 г (Гречка)">
-          <h3 class="products__title">Cat Energy SLIM 500 г</h3>
-          <p class="products__weight">Масса</p>
-          <p class="products__weight-amount">500 г</p>
-          <p class="products__flavor">Вкус</p>
-          <p class="products__flavor-amount">Гречка</p>
-          <p class="products__price">Цена</p>
-          <p class="products__price-amount">400 ₽</p>
+          <div class="products__descritpion">
+            <h3 class="products__title">Cat Energy SLIM 500 г</h3>
+            <div class="products__stats">
+              <p class="products__weight">Масса</p>
+              <p class="products__weight-amount">500 г</p>
+              <p class="products__flavor">Вкус</p>
+              <p class="products__flavor-amount">Гречка</p>
+              <p class="products__price">Цена</p>
+              <p class="products__price-amount">400 ₽</p>
+            </div>
+          </div>
           <button class="button products__order-button" type="button">Заказать</button>
         </li>
         <li class="products__card">
-          <img class="products__img" src="/source/img/catalog-cards-img/catalog-6-desktop.png"
+          <img class="products__img products__img--large" src="./img/catalog-cards-img/catalog-6-desktop.png"
             alt="Cat Energy SLIM 1000 г (Гречка)">
-          <h3 class="products__title">Cat Energy PRO 1000 г</h3>
-          <p class="products__weight">Масса</p>
-          <p class="products__weight-amount">500 г</p>
-          <p class="products__flavor">Вкус</p>
-          <p class="products__flavor-amount">Гречка</p>
-          <p class="products__price">Цена</p>
-          <p class="products__price-amount">700 ₽</p>
+          <div class="products__descritpion">
+            <h3 class="products__title">Cat Energy PRO 1000 г</h3>
+            <div class="products__stats">
+              <p class="products__weight">Масса</p>
+              <p class="products__weight-amount">500 г</p>
+              <p class="products__flavor">Вкус</p>
+              <p class="products__flavor-amount">Гречка</p>
+              <p class="products__price">Цена</p>
+              <p class="products__price-amount">700 ₽</p>
+            </div>
+          </div>
           <button class="button products__order-button" type="button">Заказать</button>
         </li>
         <li class="products__card">
-          <img class="products__img" src="/source/img/catalog-cards-img/catalog-7-desktop.png"
+          <img class="products__img" src="./img/catalog-cards-img/catalog-7-desktop.png"
             alt="Cat Energy SLIM 500 г (Рис)">
-          <h3 class="products__title">Cat Energy SLIM 500 г</h3>
-          <p class="products__weight">Масса</p>
-          <p class="products__weight-amount">500 г</p>
-          <p class="products__flavor">Вкус</p>
-          <p class="products__flavor-amount">Рис</p>
-          <p class="products__price">Цена</p>
-          <p class="products__price-amount">500 ₽</p>
+          <div class="products__descritpion">
+            <h3 class="products__title">Cat Energy SLIM 500 г</h3>
+            <div class="products__stats">
+              <p class="products__weight">Масса</p>
+              <p class="products__weight-amount">500 г</p>
+              <p class="products__flavor">Вкус</p>
+              <p class="products__flavor-amount">Рис</p>
+              <p class="products__price">Цена</p>
+              <p class="products__price-amount">500 ₽</p>
+            </div>
+          </div>
           <button class="button products__order-button" type="button">Заказать</button>
         </li>
         <li class="products__card products__card--extra">
-          <p>Показать еще 100500 товаров</p>
+          <h3 class="products__title--extra">Показать еще 100500 товаров</h3>
           <p>На самом деле вкусов гораздо больше!</p>
-          <button class="products__more-button" type="button">Показать все</button>
+          <button class="products__more-button button" type="button">Показать все</button>
         </li>
       </ul>
     </section>
     <section class="products-extra">
+      <h1 class="products-extra__main-title">Дополнительные товары</h1>
       <ul class="products-extra__list">
         <li class="products-extra__card">
           <h3 class="products-extra__title">Сахарозаменитель</h3>
@@ -168,10 +202,12 @@
     <div class="catalog__promotion promotion">
       <p class="promotion__description">Закажите все и получите чехол для кота в подарок!</p>
     </div>
-    <section class="partnership">
-      <h2 class="partnership__title partnership__title--small">Приглашаем к сотрудничеству дилеров!</h2>
-      <p class="partnership__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-      <img class="partnership__adress-img" src="/source/img/partnership-map-img.png" width="320" height="362" alt="Мы на ходимся здесь: ул. Большая
+    <section class="main__partnership partnership">
+      <div class="partnership__wrapper">
+        <h2 class="partnership__title partnership__title--small">Приглашаем к сотрудничеству дилеров!</h2>
+        <p class="partnership__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      </div>
+      <img class="partnership__adress-img" src="./img/partnership-map-img.png" width="320" height="362" alt="Мы на ходимся здесь: ул. Большая
       Конюшенная, д. 19/8
       Санкт-Петербург">
     </section>
@@ -179,7 +215,7 @@
   <footer class="page-footer">
     <ul class="page-footer__list">
       <li class="page-footer__item">
-        <img src="/source/img/logo-text.svg" alt="Текстовый логотип компании Cat energy">
+        <img src="./img/logo-text.svg" alt="Текстовый логотип компании Cat energy">
       </li>
       <li class="page-footer__item">
         <a class="page-footer__link" href="https://vk.com/htmlacademy">
@@ -208,7 +244,7 @@
         </a>
       </li>
       <li class="page-footer__item">
-        <a href="https://htmlacademy.ru/">HTML Academy</a>
+        <a class="page-footer__link" href="https://htmlacademy.ru/">HTML Academy</a>
         <a href="https://htmlacademy.ru/">
           <svg width="27" height="34" viewBox="0 0 27 34" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
