--- a/source/index.html
+++ b/source/index.html
@@ -8,13 +8,18 @@
 </head>
 
 <body class="page__body">
-  <header class="main-header">
-    <a class="main-header__logo" href="index.html">
-      <img class="main-header__logo-img" src="./img/logo-mobile-img.svg" width="33" height="37"
+  <header class="header">
+    <a class="header__logo" href="index.html">
+      <img class="header__logo-img" src="./img/logo-mobile-img.svg" width="33" height="37"
         alt="Логотип компании Cat energy">
     </a>
     <img src="./img/logo-text.svg" alt="Текстовый логотип компании Cat energy">
-    <button class="main-header__nav-toogle" type="button">
+    <button class="header__nav-toogle" type="button">
+      <svg width="24" height="18" viewBox="0 0 24 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <line y1="1.25" x2="24" y2="1.25" stroke="black" stroke-width="1.5" />
+        <line y1="9.25" x2="24" y2="9.25" stroke="black" stroke-width="1.5" />
+        <line y1="17.25" x2="24" y2="17.25" stroke="black" stroke-width="1.5" />
+      </svg>
       <span class="visually-hidden">Открыть меню</span>
     </button>
     <nav class="main-nav">
@@ -24,68 +29,69 @@
             <a class="main-nav__link" href="index.html">Главная</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="index.html">Каталог продукции</a>
+            <a class="main-nav__link" href="catalog.html">Каталог продукции</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="index.html">Подбор программы</a>
+            <a class="main-nav__link" href="form.html">Подбор программы</a>
           </li>
         </ul>
       </div>
     </nav>
   </header>
-  <main class="main">
-    <section class="main__intro intro">
+  <main>
+    <section class="intro">
       <h1 class="intro__title">Функциональное питание для котов</h1>
-      <p class="intro__description">Занялся собой? Займист котом!</p>
-      <img class="intro__img" src="./img/index-can-mobile.png" alt="Банка с едой для котов">
+      <p class="intro__description">Занялся собой? Займись котом!</p>
+      <img class="intro__img" src="./img/index-can-mobile.png" alt="Cat energy PRO 1000г">
       <a class="intro__button button" href="form.html">Подбор программы</a>
     </section>
-    <section class="main__programs programs">
+    <section class="programs">
       <h2 class="visually-hidden">Программы питания</h2>
-      <div class="programs__slim">
-        <h3 class="main__programs-title">Похудение</h3>
-        <p class="main__programs-description">Ваш кот весит больше собаки и почти утратил способность лазить по
+      <div class="programs__wrapper">
+        <h3 class="programs__title">Похудение</h3>
+        <p class="programs__description">Ваш кот весит больше собаки и почти утратил способность лазить по
           деревьям?
           Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-        <a class="main__catalog-link" href="catalog.html">Каталог slim</a>
+        <a class="programs__catalog-link" href="catalog.html">Каталог slim</a>
       </div>
-      <div class="programs__pro">
-        <h3 class="main__prgrams-title">Набор массы</h3>
-        <p class="main__programs-description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy
+      <div class="programs__wrapper">
+        <h3 class="programs__title">Набор массы</h3>
+        <p class="programs__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy
           Pro
           поможет вашему коту нарастить необходимые мышцы!</p>
-        <a class="main__catalog-link" href="catalog.html">Каталог slim</a>
+        <a class="programs__catalog-link" href="catalog.html">Каталог slim</a>
       </div>
     </section>
-    <section class="main__advantages">
-      <h2 class="main__title">Как это работает</h2>
-      <ul class="main__list">
-        <li class="main__item main__item--nutrients">
-          <p class="main__description">Функциональное питание
+    <section class="advantages">
+      <h2 class="advantages__title">Как это работает</h2>
+      <ul class="advantages__list">
+        <li class="advantages__item advantages__item--nutrients">
+          <p class="advantages__description">Функциональное питание
             содержит только полезные
             питательные вещества.</p>
         </li>
-        <li class="main__item main__item--consistency">
-          <p class="main__description">Выпускается в виде порошка,
+        <li class="advantages__item advantages__item--consistency">
+          <p class="advantages__description">Выпускается в виде порошка,
             который нужно лишь залить
             кипятком и готово.</p>
         </li>
-        <li class="main__item main__item--meal">
-          <p class="main__description">Замените один-два приема
+        <li class="advantages__item advantages__item--meal">
+          <p class="advantages__description">Замените один-два приема
             обычной еды на наше
             функциональное питание.</p>
         </li>
-        <li class="main__item main__item--duration">
-          <p class="main__description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+        <li class="advantages__item advantages__item--duration">
+          <p class="advantages__description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
         </li>
       </ul>
     </section>
-    <section class="main__example">
-      <h2 class="main__title">Живой пример</h2>
-      <p class="main__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
+    <section class="examples">
+      <h2 class="examples__title">Живой пример</h2>
+      <p class="examples__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy
+        Slim.
         Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов
         в день. </p>
-      <div class="main__stats-list  stats">
+      <div class="examples__stats-list stats">
         <div class="stats__wrapper">
           <p class="stats__number">5 кг</p>
           <p class="stats__text">снижение веса</p>
@@ -95,15 +101,17 @@
           <p class="stats__text">затрачено времени</p>
         </div>
       </div>
-      <p class="main__spent-amount">Затраты на питание: 15 000 руб.</p>
-      <div class="main__compare-slider">
-        <img class="main__example-img" src="/source/img/viewport=mobile.png" alt="">
+      <p class="examples__spent-amount">Затраты на питание: 15 000 руб.</p>
+      <div class="examples__compare-slider">
+        <img class="examples__img" src="./img/viewport=mobile.png" alt="">
       </div>
     </section>
-    <section class="main__partnership partnership">
-      <h2 class="partnership__title partnership__title--small">Приглашаем к сотрудничеству дилеров!</h2>
-      <p class="partnership__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-      <img class="partnership__adress-img" src="/source/img/partnership-map-img.png" width="320" height="362" alt="Мы на ходимся здесь: ул. Большая
+    <section class="partnership">
+      <div class="partnership__wrapper">
+        <h2 class="partnership__title partnership__title--small">Приглашаем к сотрудничеству дилеров!</h2>
+        <p class="partnership__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      </div>
+      <img class="partnership__adress-img" src="./img/partnership-map-img.png" width="320" height="362" alt="Мы на ходимся здесь: ул. Большая
       Конюшенная, д. 19/8
       Санкт-Петербург">
     </section>
@@ -111,7 +119,7 @@
   <footer class="page-footer">
     <ul class="page-footer__list">
       <li class="page-footer__item">
-        <img src="/source/img/logo-text.svg" alt="Текстовый логотип компании Cat energy">
+        <img src="./img/logo-text.svg" alt="Текстовый логотип компании Cat energy">
       </li>
       <li class="page-footer__item">
         <a class="page-footer__link" href="https://vk.com/htmlacademy">
@@ -140,7 +148,7 @@
         </a>
       </li>
       <li class="page-footer__item">
-        <a href="https://htmlacademy.ru/">HTML Academy</a>
+        <a class="page-footer__link" href="https://htmlacademy.ru/">HTML Academy</a>
         <a href="https://htmlacademy.ru/">
           <svg width="27" height="34" viewBox="0 0 27 34" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
