--- a/source/form.html
+++ b/source/form.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>HTML Academy: Кэт энерджи</title>
   <link href="./css/style.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body class="page__body">
@@ -13,7 +14,7 @@
       <img class="header__logo-img" src="./img/logo-mobile-img.svg" width="33" height="37"
         alt="Логотип компании Cat energy">
     </a>
-    <img src="./img/logo-text.svg" alt="Текстовый логотип компании Cat energy">
+    <img class="header__logo-text" src="./img/logo-text.svg" alt="Текстовый логотип компании Cat energy">
     <button class="header__nav-toogle" type="button">
       <svg width="24" height="18" viewBox="0 0 24 18" fill="none" xmlns="http://www.w3.org/2000/svg">
         <line y1="1.25" x2="24" y2="1.25" stroke="black" stroke-width="1.5" />
@@ -25,14 +26,14 @@
     <nav class="main-nav">
       <div class="main-nav__wrapper">
         <ul class="main-nav__list">
-          <li class="main-nav__item main-nav__item--current">
+          <li class="main-nav__item">
             <a class="main-nav__link" href="index.html">Главная</a>
           </li>
           <li class="main-nav__item">
             <a class="main-nav__link" href="catalog.html">Каталог продукции</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="form.html">Подбор программы</a>
+            <a class="main-nav__link main-nav__link--current" href="form.html">Подбор программы</a>
           </li>
         </ul>
       </div>
@@ -43,40 +44,42 @@
     <h2 class="form__description">Заполните анкету, и мы подберем
       программу питания для вашего кота</h2>
     <form class="program-form form" action="https://echo.htmlacademy.ru/" method="post">
-      <section class="form__field-group form__field-group--pet">
-        <h3 class="visually-hidden">Данные кота</h3>
-        <ul class="form__list">
-          <li>
-            <label class="form__pet-label" for="pet-name">Имя:*</label>
-            <input class="form__pet-input" type="text" id="pet-name" placeholder="Введите имя кота" required>
-          </li>
-          <li>
-            <label class="form__pet-label" for="pet-weight">Вес:*</label>
-            <input class="form__pet-input" type="number" id="pet-weight" placeholder="Введите вес кота" required>
-          </li>
-          <li>
-            <label class="form__pet-label" for="pet-age">Возраст:</label>
-            <input class="form__pet-input" type="number" id="pet-age" placeholder="Введите возраст кота" required>
-          </li>
-        </ul>
-      </section>
-      <section class="form__field-group form__field-group--radios radios">
-        <h3 class="visually-hidden">Выбор программы</h3>
-        <ul class="form__list">
-          <li>
-            <input class="radios__input" type="radio" id="weight-loss" name="program-selection" checked>
-            <label class="radios__label" for="weight-loss">Похудение</label>
-          </li>
-          <li>
-            <input class="radios__input" type="radio" id="weight-gain" name="program-selection">
-            <label class="radios__label" for="weight-gain">Набор массы</label>
-          </li>
-          <li>
-            <input class="radios__input" type="radio" id="advise-required" name="program-selection">
-            <label class="radios__label" for="advise-required">Не знаю (Нужен ваш совет)</label>
-          </li>
-        </ul>
-      </section>
+      <div class="program-form__wrapper">
+        <section class="form__field-group form__field-group--pet">
+          <h3 class="visually-hidden">Данные кота</h3>
+          <ul class="form__list">
+            <li>
+              <label class="form__pet-label" for="pet-name">Имя:*</label>
+              <input class="form__pet-input" type="text" id="pet-name" placeholder="Введите имя кота" required>
+            </li>
+            <li>
+              <label class="form__pet-label" for="pet-weight">Вес:*</label>
+              <input class="form__pet-input" type="number" id="pet-weight" placeholder="Введите вес кота" required>
+            </li>
+            <li>
+              <label class="form__pet-label" for="pet-age">Возраст:</label>
+              <input class="form__pet-input" type="number" id="pet-age" placeholder="Введите возраст кота" required>
+            </li>
+          </ul>
+        </section>
+        <section class="form__field-group form__field-group--radios radios">
+          <h3 class="visually-hidden">Выбор программы</h3>
+          <ul class="form__list form__list--wrapper">
+            <li>
+              <input class="radios__input" type="radio" id="weight-loss" name="program-selection" checked>
+              <label class="radios__label" for="weight-loss">Похудение</label>
+            </li>
+            <li>
+              <input class="radios__input" type="radio" id="weight-gain" name="program-selection">
+              <label class="radios__label" for="weight-gain">Набор массы</label>
+            </li>
+            <li>
+              <input class="radios__input" type="radio" id="advise-required" name="program-selection">
+              <label class="radios__label" for="advise-required">Не знаю (Нужен ваш совет)</label>
+            </li>
+          </ul>
+        </section>
+      </div>
       <section class="form__field-group form__field-group--email-tel">
         <h3 class="form__title">Контактные данные (владельца кота)</h3>
         <ul class="form__list">
@@ -116,10 +119,14 @@
           </li>
         </ul>
       </section>
-      <button class="form__submit-button button" type="submit">Отправить заявку</button>
-      <p class="form__required-mark">* — Обязательные поля</p>
+      <div class="form__reqired-wrapper">
+        <button class="form__submit-button button" type="submit">Отправить заявку</button>
+        <p class="form__required-mark">* — Обязательные поля</p>
+      </div>
     </form>
-    <section class="partnership">
+  </main>
+  <footer class="page-footer">
+    <section class="page-footer__partnership partnership">
       <div class="partnership__wrapper">
         <h2 class="partnership__title partnership__title--small">Приглашаем к сотрудничеству дилеров!</h2>
         <p class="partnership__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
@@ -128,8 +135,6 @@
       Конюшенная, д. 19/8
       Санкт-Петербург">
     </section>
-  </main>
-  <footer class="page-footer">
     <ul class="page-footer__list">
       <li class="page-footer__item">
         <img src="./img/logo-text.svg" alt="Текстовый логотип компании Cat energy">
