--- a/source/index.html
+++ b/source/index.html
@@ -46,14 +46,14 @@
       <h2 class="visually-hidden">Программы питания</h2>
       <a class="programs__button button" href="form.html">Подбор программы</a>
       <div class="programs__wrapper">
-        <h3 class="programs__title programs__title--loss">Похудение</h3>
+        <h3 class="programs__title programs__loss">Похудение</h3>
         <p class="programs__description">Ваш кот весит больше собаки и почти утратил способность лазить по
           деревьям?
           Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
         <a class="programs__catalog-link" href="catalog.html">Каталог slim</a>
       </div>
       <div class="programs__wrapper">
-        <h3 class="programs__title programs__title--gain">Набор массы</h3>
+        <h3 class="programs__title programs__gain">Набор массы</h3>
         <p class="programs__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy
           Pro
           поможет вашему коту нарастить необходимые мышцы!</p>
@@ -64,22 +64,22 @@
       <h2 class="advantages__title">Как это работает</h2>
       <ul class="advantages__list">
         <li class="advantages__item">
-          <p class="advantages__description advantages__description--nutrients">Функциональное питание
+          <p class="advantages__description advantages__nutrients">Функциональное питание
             содержит только полезные
             питательные вещества.</p>
         </li>
         <li class="advantages__item">
-          <p class="advantages__description advantages__description--consistency">Выпускается в виде порошка,
+          <p class="advantages__description advantages__consistency">Выпускается в виде порошка,
             который нужно лишь залить
             кипятком и готово.</p>
         </li>
         <li class="advantages__item">
-          <p class="advantages__description advantages__description--meal">Замените один-два приема
+          <p class="advantages__description advantages__meal">Замените один-два приема
             обычной еды на наше
             функциональное питание.</p>
         </li>
         <li class="advantages__item">
-          <p class="advantages__description  advantages__description--duration">Уже через месяц наслаждайтесь
+          <p class="advantages__description  advantages__duration">Уже через месяц наслаждайтесь
             изменениями к лучшему вашего питомца!</p>
         </li>
       </ul>
@@ -167,6 +167,6 @@
   </footer>
 </body>
 
-<script src="./script.js"></script>
+<script src="script.js"></script>
 
 </html>
