--- a/source/index.html
+++ b/source/index.html
@@ -18,7 +18,7 @@
     <button class="header__nav-toogle" type="button">
       <span class="visually-hidden">Открыть меню</span>
     </button>
-    <nav class="main-nav main-nav--closed main-nav--nojs">
+    <nav class="main-nav main-nav--closed">
       <div class="main-nav__wrapper">
         <ul class="main-nav__list">
           <li class="main-nav__item">
